Bug Fixes
+ Auto resize removed for description boxes
+ Changed the font for the session description box
+ Description box was overflowing for mobile devices
+ Centred the homepage hero box

--- a/pomodoro/src/css/style.css
+++ b/pomodoro/src/css/style.css
@@ -82,6 +82,10 @@ h4 {
   font-family: "Lato", sans-serif;
 }
 
+.session-create__form__description {
+  font-family: "Lato", sans-serif;
+}
+
 .light-grey-text {
   color: var(--col-text-grey);
 }
@@ -94,7 +98,9 @@ h4 {
 .homepage {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  min-height: 100vh;
   overflow: hidden;
   background-color: var(--col-primary-cream);
 }
@@ -152,7 +158,6 @@ h4 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 20px;
 }
 
 .hero-box .greeting {
@@ -167,7 +172,7 @@ h4 {
 
 .hero-box__image {
   width: 350px;
-  margin: 15px 0 30px 0px;
+  margin: 35px 0 30px 0px;
 }
 
 .hero-box__description {
@@ -419,6 +424,7 @@ h4 {
   border: 1.5px solid var(--col-border-grey);
   border-radius: 5px;
   padding: 7px 10px;
+  resize: none;
 }
 
 .task-create__form__description:focus {
@@ -774,6 +780,7 @@ h4 {
   border: 1.5px solid var(--col-border-grey);
   border-radius: 5px;
   padding: 7px 10px;
+  resize: none;
 }
 
 .session-create__form__description:focus {
