--- a/pomodoro/src/sass/base/_typography.scss
+++ b/pomodoro/src/sass/base/_typography.scss
@@ -47,6 +47,10 @@ h4 {
   font-family: "Lato", sans-serif;
 }
 
+.session-create__form__description {
+  font-family: "Lato", sans-serif;
+}
+
 .light-grey-text {
   color: var(--col-text-grey);
 }
