--- a/pomodoro/src/sass/components/Session/_sessionCreate.scss
+++ b/pomodoro/src/sass/components/Session/_sessionCreate.scss
@@ -114,6 +114,7 @@
       border: 1.5px solid var(--col-border-grey);
       border-radius: 5px;
       padding: 7px 10px;
+      resize: none;
 
       &:focus {
         outline: none;
