--- a/pomodoro/src/sass/components/_heroBox.scss
+++ b/pomodoro/src/sass/components/_heroBox.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
 
-  margin-top: 20px;
+  // margin-top: 20px;
 
   .greeting {
     color: var(--col-text-grey);
@@ -19,7 +19,7 @@
 
   &__image {
     width: 350px;
-    margin: 15px 0 30px 0px;
+    margin: 35px 0 30px 0px;
   }
 
   &__description {
