--- a/pomodoro/src/sass/pages/_homePage.scss
+++ b/pomodoro/src/sass/pages/_homePage.scss
@@ -1,7 +1,10 @@
 .homepage {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+
+  min-height: 100vh;
 
   overflow: hidden;
   background-color: var(--col-primary-cream);
